# project

./: Makefile  README  project  project.c
week2/: week2.c
week3/: AUTHORS  Makefile  Makefile.in  NEWS  config.h  config.status  configure  configure.ac  libtool
week3/autom4te.cache/: output.2  output.4  requests  traces.2  traces.3  traces.4  traces.5
week3/src/: Makefile  Makefile.am  Makefile.in  hw_week_3  hw_week_3.c
week3/src/.deps/: hw_week_3-hw_week_3.Po
week4/: README  configure.ac
week4/src/: Makefile.am  llist  llist.c
week5/: AUTHORS  ChangeLog  configure.ac
week5/src/: Makefile  Makefile.in  threads  threads.c
week5/src/.deps/: threads-threads.Po
week6/: Makefile  Makefile.in  README  config.h  config.status  configure
week6/autom4te.cache/: output.0  requests  traces.0  traces.1
week6/src/: Makefile  Makefile.am  Makefile.in  threads  threads.c  threads.c~
week6/src/.deps/: threads-threads.Po
week6/src/autom4te.cache/: requests
